@@ -25,6 +25,8 @@ xine-lib (1-rc6)
   * support mp3 audio in mp4 files
   * use utf-8 for matroska subtitles
   * next stage of MINGW port - engine library compiles now
+  * Improve DVD MRL handling.
+  * Improve Transport stream handling.
 
 xine-lib (1-rc5)  
   * add support for ejecting removable media on Solaris
